tools/archive/academy/zitadel/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zitadel-ingress
  namespace: zitadel
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.chancey.dev`) && PathPrefix(`/`) && !PathPrefix(`/oauth2`)
      kind: Rule
      priority: 11
      services:
        - name: zitadel
          kind: Service
          port: 8080
  tls:
    secretName: zitadel-cert-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel-ingress-external
  namespace: zitadel
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: xauth.chancey.dev
    external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  ingressClassName: nginx-external
  rules:
    - host: &host xauth.chancey.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zitadel
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel-ingress-auth-external
  namespace: zitadel
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: auth.external.chancey.dev
    external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  ingressClassName: nginx-external
  rules:
    - host: &host auth.external.chancey.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zitadel
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
